Fixing copyright alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,5 +44,5 @@ span {
     font-weight: normal;
     font-size: 21px;
     color: gray;
-    margin: right
+    margin: right;
 }
